syntax = "proto3";

package spine.test.events;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.client";
option java_outer_classname = "EventsProto";
option java_multiple_files = true;

message ClProjectCreated {

    string id = 1;
    ClProjectName name = 2;
}

message ClProjectName {
    string value = 1;
}
